--- a/django/docker-compose.yml
+++ b/django/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
  mysql:
-  image: mysql
+  image: mysql:5.7
   environment:
    - MYSQL_ROOT_PASSWORD=yunwei
    - MYSQL_DATABASE=docker
