--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:2.7
 ENV PYTHONUNBUFFERED 1
+RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo Asia/Shanghai > /etc/timezone
 RUN mkdir /code
 WORKDIR /code
 ADD requirements.txt /code
