--- a/django/docker-compose.yml
+++ b/django/docker-compose.yml
@@ -7,15 +7,18 @@ services:
    - MYSQL_DATABASE=docker
    - MYSQL_USER=docker
    - MYSQL_PASSWORD=docker
+   - TZ=Asia/Shanghai
+  command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --max-connections=2000 --default-time-zone='+8:00'
   expose:
    - 3306
   ports:
    - 3306:3306
-  #volumes:
-  # - ./data:/var/lib/mysql
+  volumes:
+   - /Users/orgx/github/docker_volumes/docker_dj:/var/lib/mysql
 
  web:
   build: .
+#  #dockerfile: 可以指定dockerfile文件，默认build是指定目录并寻找当前目录下Dockerfile文件
   command: python manage.py runserver 0.0.0.0:8000
   volumes:
    - .:/code
