--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -10,6 +10,10 @@ RUN echo "${TIMEZONE}" > /etc/timezone
 
 USER jenkins
 
-COPY plugins.txt /usr/share/jenkins/plugins.txt
+#COPY plugins.txt /usr/share/jenkins/plugins.txt
 
-RUN /usr/local/bin/plugins.sh /usr/share/jenkins/plugins.txt
+#RUN /usr/local/bin/plugins.sh /usr/share/jenkins/plugins.txt
+
+COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
+
+RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
