--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -10,10 +10,14 @@ RUN echo "${TIMEZONE}" > /etc/timezone
 
 USER jenkins
 
-#COPY plugins.txt /usr/share/jenkins/plugins.txt
+ADD . /tmp
+
+RUN ls -l
+
+#COPY jenkins/plugins.txt /usr/share/jenkins/plugins.txt
 
 #RUN /usr/local/bin/plugins.sh /usr/share/jenkins/plugins.txt
 
-COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
+#COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 
-RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
+#RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
