--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -4,6 +4,6 @@ LABEL maintainer="hcylus <hercylus@gmail.com>"
 
 ENV TIMEZONE=Asia/Shanghai
 
-RUN echo "${TIMEZONE}" > /etc/timezone
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "${TIMEZONE}" > /etc/timezone
 
 RUN npm install -g pm2
