--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -4,6 +4,7 @@ LABEL maintainer="hcylus <hercylus@gmail.com>"
 
 ENV TIMEZONE=Asia/Shanghai
 
-RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "${TIMEZONE}" > /etc/timezone
+RUN apk add tzdata && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
+&& echo "${TIMEZONE}" > /etc/timezone && apk del tzdata
 
 RUN npm install -g pm2
