--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -3,6 +3,8 @@ FROM jenkins/jenkins:lts
 MAINTAINER hcylus "hercylus@gmail.com"
 
 ENV TIMEZONE=Asia/Shanghai
+ENV JENKINS_UC=http://updates.jenkins.io
+# https://mirrors.tuna.tsinghua.edu.cn/jenkins/updates/update-center.json
 
 USER root
 
@@ -10,7 +12,7 @@ RUN echo "${TIMEZONE}" > /etc/timezone
 
 USER jenkins
 
-COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
+COPY --chown=jenkins:jenkins plugins.txt /usr/share/jenkins/ref/plugins.txt
 
-RUN /usr/local/bin/plugins.sh /usr/share/jenkins/ref/plugins.txt
-
+RUN jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt --available-updates --output txt >  /usr/share/jenkins/ref/update-plugins.txt \
+    && mv /usr/share/jenkins/ref/update-plugins.txt /usr/share/jenkins/ref/plugins.txt && jenkins-plugin-cli --verbose -f /usr/share/jenkins/ref/plugins.txt
