--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,11 +1,10 @@
-FROM node:12.16.3-alpine3.11
+FROM node:lts-alpine
 
 LABEL maintainer="hcylus <hercylus@gmail.com>"
 
 ENV TIMEZONE=Asia/Shanghai
 
 RUN apk add tzdata && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
-&& echo "${TIMEZONE}" > /etc/timezone && apk del tzdata
+&& echo "${TIMEZONE}" > /etc/timezone
 
-RUN npm install -g pm2
-
+RUN npm install -g pm2 && npm cache clean -f
