--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -1,8 +1,8 @@
-FROM python:2.7
-ENV PYTHONUNBUFFERED 1
+FROM python:3
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo Asia/Shanghai > /etc/timezone
-RUN mkdir /code
 WORKDIR /code
-ADD requirements.txt /code
+COPY requirements.txt /code/
 RUN pip install -r requirements.txt
-ADD . /code
+COPY . /code/
